Fixed spacing in header on the settings page

--- a/src/components/general-elements/header/header.scss
+++ b/src/components/general-elements/header/header.scss
@@ -5,6 +5,10 @@
 		align-items: center;
 		justify-content: flex-start;
 
+		* + h1 {
+			margin-left: 1rem;
+		}
+
 		> .spacer {
 			flex-grow: 1000;
 		}
